--- a/docker/docker-compose-mobeye.yaml
+++ b/docker/docker-compose-mobeye.yaml
@@ -20,6 +20,7 @@ services:
       options:
         max-size: "1k"
         max-file: "3"
+    restart: always
 
   conductor-ui:  # will be exposed on port 5000
     environment:
@@ -27,3 +28,4 @@ services:
     image: conductor:ui-es7
     network_mode: "host"
     stdin_open: true
+    restart: always
