Add log4j.properties bind mount
Allow to configure conductor logger outside of the container

--- a/docker/docker-compose-mobeye.yaml
+++ b/docker/docker-compose-mobeye.yaml
@@ -9,6 +9,9 @@ services:
       - type: bind
         source: ./server/config/config.properties
         target: /app/config/config.properties
+      - type: bind
+        source: ./server/config/log4j.properties
+        target: /app/config/log4j.properties
     network_mode: "host"
     healthcheck:
       test: ["CMD", "curl","-I" ,"-XGET", "http://localhost:8080/health"]
